--- a/zuul/layout.yaml
+++ b/zuul/layout.yaml
@@ -15,7 +15,7 @@ pipelines:
         # recheck trigger that runs the check pipeline jobs when someone
         # adds a comment to a review that says "myvendor: recheck".
         - event: comment-added
-          comment: (?i)^(Patch Set [0-9]+:)?( [\w\\+-]*)*(\n\n)?\s*myvendor:\s*recheck\s*$
+          comment: (?i)^(Patch Set [0-9]+:)?( [\w\\+-]*)*(\n\n)?\s*Linaro CI:\s*recheck\s*$
     success:
       gerrit:
         verified: 1
@@ -25,7 +25,7 @@ pipelines:
     merge-failure:
       smtp:
         #TODO: Update these to real e-mail addresses
-        to: third_party_ci@example.com
+        to: xinliang.liu@linaro.org
         from: zuul@example.com
         subject: Upstream change {change} has a merge failure
 
@@ -38,17 +38,17 @@ pipelines:
         - event: patchset-created
         - event: change-restored
         - event: comment-added
-          comment: (?i)^(Patch Set [0-9]+:)?( [\w\\+-]*)*(\n\n)?\s*myvendor:\s*recheck\s*$
+          comment: (?i)^(Patch Set [0-9]+:)?( [\w\\+-]*)*(\n\n)?\s*Linaro CI:\s*recheck\s*$
     success:
       smtp:
         #TODO: Update these to real e-mail addresses
-        to: third_party_ci@example.com
+        to: xinliang.liu@linaro.org
         from: zuul@example.com
         subject: 'Silent check of {change.project} {change.number},{change.patchset} passed'
     failure:
       smtp:
         #TODO: Update these to real e-mail addresses
-        to: third_party_ci@example.com
+        to: xinliang.liu@linaro.org
         from: zuul@example.com
         subject: 'Silent check of {change.project} {change.number},{change.patchset} failed'
 
