--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -1,5 +1,5 @@
-script-dir: /etc/project-config/nodepool/scripts
-elements-dir: /etc/project-config/nodepool/elements
+script-dir: /etc/nodepool/scripts
+elements-dir: /etc/nodepool/elements
 images-dir: /opt/nodepool_dib
 
 cron:
