--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -33,10 +33,9 @@ labels:
 diskimages:
     - name: dpc
       elements:
-        - ubuntu
+        - ubuntu-minimal
         - vm
         - openstack-repos
-        - puppet
         - nodepool-base
         - cache-devstack
       release: xenial
