--- a/zuul/layout.yaml
+++ b/zuul/layout.yaml
@@ -66,4 +66,4 @@ projects:
     silent:
       # Uncomment this job when you have a jenkins slave running and want to
       # test a full Tempest run within devstack.
-      - dsvm-tempest-full
+      #- dsvm-tempest-full
