--- a/zuul/layout.yaml
+++ b/zuul/layout.yaml
@@ -38,20 +38,38 @@ pipelines:
         - event: patchset-created
         - event: change-restored
         - event: comment-added
-          comment: (?i)^(Patch Set [0-9]+:)?( [\w\\+-]*)*(\n\n)?\s*Linaro CI:\s*recheck\s*$
+          comment: (?i)^(Patch Set [0-9]+:)?( [\w\\+-]*)*(\n\n)?\s*Linaro silent:\s*recheck\s*$
     success:
       smtp:
         #TODO: Update these to real e-mail addresses
         to: xinliang.liu@linaro.org
-        from: zuul@example.com
+        from: linaro-thirdparty-ci@example.com
         subject: 'Silent check of {change.project} {change.number},{change.patchset} passed'
     failure:
       smtp:
         #TODO: Update these to real e-mail addresses
         to: xinliang.liu@linaro.org
-        from: zuul@example.com
+        from: linaro-thirdparty-ci@example.com
         subject: 'Silent check of {change.project} {change.number},{change.patchset} failed'
 
+#  - name: periodic
+#    source: gerrit
+#    manager: IndependentPipelineManager
+#    trigger:
+#      timer:
+#        - time: '*/5 * * * *'
+#    success:
+#      smtp:
+#        #TODO: Update these to real e-mail addresses
+#        to: xinliang.liu@linaro.org
+#        from: zuul@example.com
+#        subject: 'Periodic check of {change.project} {change.number},{change.patchset} passed'
+#    failure:
+#      smtp:
+#        #TODO: Update these to real e-mail addresses
+#        to: xinliang.liu@linaro.org
+#        from: zuul@example.com
+#        subject: 'Periodic check of {change.project} {change.number},{change.patchset} failed'
 
 jobs:
   - name: ^dsvm-tempest.*$
@@ -67,3 +85,6 @@ projects:
       # Uncomment this job when you have a jenkins slave running and want to
       # test a full Tempest run within devstack.
       #- dsvm-tempest-full
+      - noop-check-communication
+#    periodic:
+#      - noop-check-communication
