Add nodepool yaml file check test case
Signed-off-by: Xinliang Liu <xinliang.liu@linaro.org>

--- a/tox.ini
+++ b/tox.ini
@@ -40,5 +40,8 @@ commands =
 basepython = python2.7
 deps = PyYAML
 commands =
-  {toxinidir}/tools/run-layout.sh
+#  {toxinidir}/tools/run-layout.sh
   {toxinidir}/tools/layout-checks.py
+
+[testenv:nodepool]
+commands = nodepool -c {toxinidir}/nodepool/nodepool.yaml config-validate
