--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -29,31 +29,62 @@ labels:
     min-ready: 1
     providers:
       - name: local_01
+  - name: ubuntu-xenial
+    image: ubuntu-xenial
+#    ready-script: configure_mirror.sh
+    min-ready: 1
+    providers:
+      - name: local_01
 
 diskimages:
-    - name: debian-jessie
-      elements:
-        - debian-minimal
-        - vm
-        - simple-init
-        - openstack-repos
-        - nodepool-base
-        - cache-devstack
-        - growroot
-        - infra-package-needs
-      release: jessie
-      env-vars:
-        TMPDIR: /opt/dib_tmp
-        DIB_CHECKSUM: '1'
-        DIB_IMAGE_CACHE: /opt/dib_cache
-        DIB_APT_LOCAL_CACHE: '0'
-        DIB_DISABLE_APT_CLEANUP: '1'
-        DIB_DISTRIBUTION_MIRROR: http://repo.open-estuary.cloud:8083/debian/
-        DIB_GRUB_TIMEOUT: '0'
-        DIB_BOOTLOADER_DEFAULT_CMDLINE: "console=ttyAMA0"
-        DIB_DEBIAN_USE_DEBOOTSTRAP_CACHE: '1'
-        DIB_DEBOOTSTRAP_CACHE: '1'
-        DIB_CUSTOM_PROJECTS_LIST_URL: file:///home/ubuntu/git/project-config/gerrit/linaro_CI_projects.yaml
+  - name: debian-jessie
+    elements:
+      - debian-minimal
+      - vm
+      - simple-init
+      - openstack-repos
+      - nodepool-base
+      - cache-devstack
+      - growroot
+      - infra-package-needs
+    release: jessie
+    env-vars:
+      TMPDIR: /opt/dib_tmp
+      DIB_CHECKSUM: '1'
+      DIB_IMAGE_CACHE: /opt/dib_cache
+      DIB_APT_LOCAL_CACHE: '0'
+      DIB_DISABLE_APT_CLEANUP: '1'
+      DIB_DISTRIBUTION_MIRROR: http://repo.open-estuary.cloud:8083/debian/
+      DIB_GRUB_TIMEOUT: '0'
+      DIB_BOOTLOADER_DEFAULT_CMDLINE: "console=ttyAMA0"
+      DIB_DEBIAN_USE_DEBOOTSTRAP_CACHE: '1'
+      DIB_DEBOOTSTRAP_CACHE: '1'
+      DIB_CUSTOM_PROJECTS_LIST_URL: file:///home/ubuntu/git/project-config/gerrit/linaro_CI_projects.yaml
+#        DIB_DEBUG_TRACE: '1'
+  - name: ubuntu-xenial
+    elements:
+      - ubuntu-minimal
+      - vm
+      - simple-init
+      - openstack-repos
+      - nodepool-base
+      - cache-devstack
+      - initialize-urandom
+      - growroot
+      - infra-package-needs
+    release: xenial
+    env-vars:
+      TMPDIR: /opt/dib_tmp
+      DIB_CHECKSUM: '1'
+      DIB_IMAGE_CACHE: /opt/dib_cache
+      DIB_APT_LOCAL_CACHE: '0'
+      DIB_DISABLE_APT_CLEANUP: '1'
+      DIB_GRUB_TIMEOUT: '0'
+      DIB_DEBIAN_COMPONENTS: 'main,universe'
+      DIB_BOOTLOADER_DEFAULT_CMDLINE: "console=ttyAMA0"
+      DIB_CUSTOM_PROJECTS_LIST_URL: file:///home/ubuntu/git/project-config/gerrit/linaro_CI_projects.yaml
+      DIB_DEBIAN_USE_DEBOOTSTRAP_CACHE: '1'
+      DIB_DEBOOTSTRAP_CACHE: '1'
 #        DIB_DEBUG_TRACE: '1'
 
 providers:
@@ -64,7 +95,7 @@ providers:
     auth-url: 'http://192.168.1.89:5000/v2.0'
     project-name: 'openstack-ci'
     max-servers: 2
-    boot-timeout: 120
+    boot-timeout: 200
     api-timeout: 60
     clean-floating-ips: true
     networks:
@@ -72,12 +103,23 @@ providers:
     images:
       - name: debian-jessie
         min-ram: 2048
-#        name-filter: small
         diskimage: debian-jessie
         username: jenkins
         private-key: '/home/nodepool/.ssh/id_rsa'
         meta:
             hw_firmware_type: uefi
+            hw_disk_bus: scsi
+            hw_scsi_model: virtio-scsi
+      - name: ubuntu-xenial
+        min-ram: 2048
+        diskimage: ubuntu-xenial
+        username: jenkins
+        private-key: /home/nodepool/.ssh/id_rsa
+        config-drive: true
+        meta:
+            hw_firmware_type: uefi
+            hw_disk_bus: scsi
+            hw_scsi_model: virtio-scsi
 
 targets:
   - name: jenkins1
