--- a/gerrit/linaro_CI_projects.yaml
+++ b/gerrit/linaro_CI_projects.yaml
@@ -6753,8 +6753,8 @@
 #  groups:
 #    - ceilometer
 #  description: OpenStack Telemetry Specifications
-#- project: openstack/tempest
-#  description: OpenStack Testing (Tempest) of an existing cloud
+- project: openstack/tempest
+  description: OpenStack Testing (Tempest) of an existing cloud
 #- project: openstack/tempest-horizon
 #  description: Horizon plugin for tempest
 #- project: openstack/tempest-lib
