--- a/jenkins/jobs/examples.yaml
+++ b/jenkins/jobs/examples.yaml
@@ -26,7 +26,7 @@
     builders:
       - net-info
 #      - devstack-checkout
-      - devstack-checkout-http
+#      - devstack-checkout-http
       - shell: |
           #!/bin/bash -xe
           if [ -z $ZUUL_PROJECT ]; then
