--- a/jenkins/jobs/projects.yaml
+++ b/jenkins/jobs/projects.yaml
@@ -1,4 +1,143 @@
 - project:
+    name: kolla
+
+    jobs:
+      - coverage-jobs
+      - python-jobs
+#      - pypi-jobs
+#      - openstack-publish-jobs
+#      - openstack-releasenotes-jobs
+      - kolla-publish-image-jobs
+      - 'gate-{name}-tox-{envlist}-{node}':
+          envlist: bandit
+          node: ubuntu-xenial
+      - '{pipeline}-kolla-dsvm-{action}-{distro}-{type}-{node}{suffix}':
+          action:
+            - build
+            - deploy
+          distro: ubuntu
+          node:
+            - ubuntu-xenial
+          pipeline: gate
+          type:
+            - binary
+            - source
+          suffix: "-nv"
+      - '{pipeline}-kolla-dsvm-{action}-{distro}-{type}-{node}{suffix}':
+          action:
+            - build
+            - save
+          distro: ubuntu
+          node:
+            - ubuntu-xenial
+          pipeline: gate
+          type:
+            - binary
+            - source
+          suffix: ''
+      - 'publish-kolla-dsvm-{action}-{distro}-{type}-{node}{suffix}':
+          action:
+            - build
+            - save
+          distro: ubuntu
+          node:
+            - ubuntu-xenial
+          type:
+            - binary
+            - source
+          suffix: ''
+      - '{pipeline}-kolla-dsvm-{orch}-{action}-{distro}-{type}-{node}{suffix}':
+          action:
+            - build
+            - deploy-multinode
+          distro: ubuntu
+          orch:
+            - ansible
+            - kubernetes
+          node: ubuntu-xenial-2-node
+          pipeline: publish
+          type:
+            - binary
+            - source
+          suffix: ''
+
+- project:
+    name: kolla-ansible
+
+    jobs:
+      - python-jobs
+#      - pypi-jobs
+#      - openstack-publish-jobs
+#      - openstack-releasenotes-jobs
+#      - deploy-guide-jobs:
+#          service: kolla-ansible
+      - '{pipeline}-kolla-ansible-dsvm-{action}-{distro}-{type}-{node}{suffix}':
+          action: deploy
+          distro: ubuntu
+          node: ubuntu-xenial
+          pipeline: gate
+          type:
+            - binary
+            - source
+          suffix: "-nv"
+      - '{pipeline}-kolla-ansible-dsvm-{action}-{distro}-{type}-{node}{suffix}':
+          action: deploy-multinode
+          distro: ubuntu
+          node: ubuntu-xenial-2-node
+          pipeline: gate
+          type:
+            - binary
+            - source
+          suffix: "-nv"
+      - '{pipeline}-kolla-ansible-dsvm-{action}-{distro}-{type}-{node}{suffix}':
+          action: deploy-ceph
+          distro: ubuntu
+          node: ubuntu-xenial-2-node
+          pipeline: gate
+          type:
+            - binary
+            - source
+          suffix: "-nv"
+
+- project:
+    name: kolla-kubernetes
+
+    jobs:
+      - python-jobs
+#      - pypi-jobs
+#      - openstack-publish-jobs
+#      - openstack-releasenotes-jobs
+      - 'gate-kolla-kubernetes-{action}-{distro}-{type}-{ver}-{config}{suffix}':
+          action: deploy
+          config: ironic
+          distro: ubuntu
+          node: ubuntu-xenial
+          type: source
+          ver: '4'
+          suffix: '-nv'
+      - 'gate-kolla-kubernetes-{action}-{distro}-{type}-{ver}-{config}{suffix}':
+          action: deploy
+          config:
+            - ceph
+            - iscsi
+          distro: ubuntu
+          node: ubuntu-xenial
+          type: binary
+          ver: '2'
+          suffix: '-nv'
+      - 'periodic-kolla-kubernetes-{action}-{distro}-{type}-{ver}-{config}':
+          action: deploy
+          config:
+            - ceph
+            - iscsi
+          distro: ubuntu
+          node: ubuntu-xenial
+          type: binary
+          ver:
+            - '2'
+            - '3'
+            - '4'
+- project:
     name: sandbox
     github-org: openstack-dev
     node: debian-jessie
